Conservatively strip whitespace in comments. Fixes GH-3.

--- a/test/fixtures-styles/options-markup.less
+++ b/test/fixtures-styles/options-markup.less
@@ -32,3 +32,40 @@
 // @Modifier .title - The primary header of the document, should refelect `title` tags.
 //
 // @endsection
+
+// @section 7.4.
+//
+// Should respect whitespace in comment blocks with preprocessor comments
+//
+// @Markup
+// <div class="{$modifiers}">
+//     <h1>Header</h1>
+// </div>
+//
+// @endsection
+
+/**
+ * @section 7.5.
+ *
+ * Should respect whitespace in comment blocks with css docblocks
+ *
+ * @Markup
+ * <div class="{$modifiers}">
+ *     <h1>Header</h1>
+ * </div>
+ *
+ * @endsection
+ **/
+
+/*
+@section 7.6.
+
+Should respect whitespace in comment blocks with multiline css comments
+
+@Markup
+<div class="{$modifiers}">
+    <h1>Header</h1>
+</div>
+
+@endsection
+ */
